fix: chart overflow

--- a/src/containers/Chart.css
+++ b/src/containers/Chart.css
@@ -6,7 +6,7 @@
 @media screen and (max-width: 2160px) {
   .chart {
     width: 1750px !important;
-    height: 900px !important;
+    height: 850px !important;
   }
 }
 
@@ -20,21 +20,21 @@
 @media screen and (max-width: 1720px) {
   .chart {
     width: 1400px !important;
-    height: 700px !important;
+    height: 600px !important;
   }
 }
 
 @media screen and (max-width: 1500px) {
   .chart {
     width: 1200px !important;
-    height: 600px !important;
+    height: 525px !important;
   }
 }
 
 @media screen and (max-width: 1280px) {
   .chart {
     width: 900px !important;
-    height: 525px !important;
+    height: 450px !important;
   }
 }
 
